# Math4BG

./: .gitignore  CMakeLists.txt  README.md  res.rc  resource.h
IO/: IModelLoader.cpp  IModelLoader.h  IOException.cpp  IOException.h  ModelData.h  OBJLoader.cpp  OBJLoader.h
IO/DirFile/: FilesystemUtils.cpp  FilesystemUtils.h
IO/IMG/: ImageLoaders.cpp  ImageLoaders.h
IO/Json/: json.hpp
Input/: KeyInput.cpp  KeyInput.h  MouseInput.cpp  MouseInput.h
Output/: CircularQueue.h  IOutput.cpp  IOutput.h
Output/Console/: TerminalOutput.cpp  TerminalOutput.h
Output/ImGuiConsole/: ImGuiOutput.cpp  ImGuiOutput.h
Physics/: Transform.cpp  Transform.h
Program/: Application.cpp  Application.h  main.cpp
Program/Config/: Config.cpp  Config.h
Sound/: Sound.cpp  Sound.h  WAVSound.cpp  WAVSound.h
Transformers/: Context.cpp  Context.h  Contexts.cpp  Contexts.h  Logic.cpp  Logic.h  LuaInterpreter.cpp  LuaInterpreter.h  MainManager.cpp  MainManager.h  Shapes.cpp  Shapes.h  World.cpp  World.h  WorldType.h
Transformers/Interpreter/: CodeException.cpp  CodeException.h  ILanInterpreter.cpp  ILanInterpreter.h  JSInterpreter.cpp  JSInterpreter.h  JavascriptInterpreter.cpp  JavascriptInterpreter.h  LuaInterpreter.cpp  LuaInterpreter.h
Transformers/Project/: ProjectManager.cpp  ProjectManager.h  ProjectPackage.cpp  ProjectPackage.h  ProjectSaverLoader.cpp  ProjectSaverLoader.h
Transformers/World/: AbstractWorld.cpp  AbstractWorld.h  ConcreteWorld.cpp  ConcreteWorld.h  IWorld.cpp  IWorld.h
Utils/: ColorSwitch.cpp  ColorSwitch.h  FileSplit.cpp  FileSplit.h
View/: Error.cpp  Error.h  IWindow.cpp  IWindow.h  Renderer.cpp  Renderer.h  Screen.cpp  Screen.h  Window.cpp  Window.h
View/IMGUI/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
View/IMGUI/Own/: CodeEditor.cpp  CodeEditor.h  GuiConsole.cpp  GuiConsole.h  IGuiElement.h
View/IMGUI/Own/Docking/: DockSpace.cpp  DockSpace.h  MainDockSpace.cpp  MainDockSpace.h
View/IMGUI/Own/FileTree/: FileTree.cpp  FileTree.h  FileTreeContent.cpp  FileTreeContent.h
View/IMGUI/Own/Main/: EditorView.cpp  EditorView.h
View/IMGUI/Own/TopMenu/: TopMenu.cpp  TopMenu.h
View/Renderer/: IRenderer.cpp  IRenderer.h  OG33Renderer.cpp  OG33Renderer.h  OG33RendererSDL.cpp  OG33RendererSDL.h
View/Renderer/2D/: Renderer2D.cpp  Renderer2D.h
View/Renderer/2D/Object/: Circle.cpp  Circle.h  Line.cpp  Line.h  Object2D.cpp  Object2D.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  SinglePixel.cpp  SinglePixel.h
View/Renderer/3D/: Renderer3D.cpp  Renderer3D.h
View/Renderer/3D/Camera/: ICamera.cpp  ICamera.h  MainCamera.cpp  MainCamera.h
View/Renderer/3D/GL/: GLMacros.cpp  GLMacros.h  GLUtils.cpp  GLUtils.h
View/Renderer/3D/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
View/Renderer/3D/Object/: Cube.cpp  Cube.h  Object3D.cpp  Object3D.h  Plane.cpp  Plane.h  Pyramid.cpp  Pyramid.h
View/Renderer/3D/Particles/: Particle.cpp  Particle.h
View/Renderer/3D/PostProcessing/: ViewportSquare.cpp  ViewportSquare.h
View/Renderer/3D/Shaders/: BasicShaders.cpp  BasicShaders.h  Shader.cpp  Shader.h  ShaderException.cpp  ShaderException.h  ShaderProgramSource.cpp  ShaderProgramSource.h
View/Renderer/3D/Texture/: BMPTexture.cpp  BMPTexture.h  Texture.cpp  Texture.h
View/Renderer/3D/Texture/FrameBuffer/: FrameBufferObject.cpp  FrameBufferObject.h  RenderedTexture.cpp  RenderedTexture.h
View/Renderer/3D/Vertices/: IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
View/Renderer/Draw/: IDrawable.cpp  IDrawable.h
View/Windowing/: MainWindow.cpp  MainWindow.h  RenderWin.cpp  RenderWin.h
